# duckman

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  dist-workspace.toml  duckman-config.md  duckman-example.toml  duckman.toml  family.csv
.github/workflows/: build-setup.yml  release.yml
src/: commands.rs  duckman_app.rs  duckman_config.rs  ext_commands.rs  github.rs  lib.rs  main.rs  profile_commands.rs  runner.rs  shim.rs  snippet_commands.rs
src/resources/: community_extensions.csv  core_extensions.csv  duckdb_versions.csv
